# videorc

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
changelog/: 0.9.11-beta.1.md  0.9.13-beta.1.md  0.9.14-beta.1.md  0.9.15-beta.1.md  0.9.17-beta.1.md  0.9.18-beta.1.md  0.9.19-beta.1.md  0.9.25-beta.1.md  0.9.26-beta.1.md  0.9.27-beta.1.md  0.9.28-beta.1.md  0.9.29-beta.1.md  0.9.30-beta.1.md  0.9.31-beta.1.md  0.9.32-beta.1.md  0.9.33-beta.1.md  0.9.34-beta.1.md  0.9.35-beta.1.md  0.9.36-beta.1.md  0.9.37-beta.1.md  0.9.38-beta.1.md  0.9.39-beta.1.md  0.9.40-beta.1.md  0.9.41-beta.1.md  0.9.42-beta.1.md  0.9.43-beta.1.md  0.9.45-beta.1.md  0.9.46-alpha.1.md  0.9.47-beta.1.md  0.9.7-beta.1.md  0.9.9-beta.1.md  README.md
docs/: desktop-auth-rollout.md  distribution.md  live-chat-live-smoke-checklist.md  multistreaming-m0-audit.md  native-4k-media-engine-refactor.md  native-metal-preview-plan.md  oauth-live-smoke.md  obs-acceptance-checklist.md  preview-recording-parity-slices.md  remote-control.md  ui-glass-redesign-slices.md  ux-ia-refactor-plan.md  windows-dev-loop.md  windows-port-plan.md  windows-signing.md
patches/: app-builder-lib@26.8.1.patch
plans/: 001-windows-packaging-pipeline.md  002-windows-window-chrome-fixes.md  003-pin-capture-seams-with-unit-tests.md  004-bundle-native-preview-helper.md  005-make-livestream-zero-copy-by-default.md  006-true-record-stream-split-output.md  007-characterize-studio-session-orchestration.md  008-add-dependency-advisory-gates.md  022-full-app-qa-fixes.md  (+15 more)
(+588 files in other folders)
