[workspace]
members = ["crates/videorc-backend"]
resolver = "3"

# Disable incremental codegen for dev builds. On macOS arm64, stale incremental
# serde codegen artifacts have produced invalid links for the backend binary.
[profile.dev]
incremental = false

# The backend runs real-time per-pixel work (e.g. camera YUV->BGRA conversion at 4K).
# An unoptimized debug build makes that ~50x slower (hundreds of ms/frame), which
# starves capture. Optimize the backend crate even in dev so `pnpm dev` behaves like
# the shipped build; its hot paths are otherwise GPU/hardware so this is cheap at runtime.
[profile.dev.package.videorc-backend]
opt-level = 2
